opam-version: "1.2"
name: "tick"
version: "1.0"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
authors: ["Vincent Bernardoff <vb@luminar.eu.org>"]
homepage: "https://github.com/vbmithr/ocaml-tick"
doc: "https://vbmithr.github.io/ocaml-tick/doc"
license: "ISC"
dev-repo: "git+https://github.com/vbmithr/ocaml-tick.git"
bug-reports: "https://github.com/vbmithr/ocaml-tick/issues"
tags: []
available: [ ocaml-version >= "4.03.0" ]
depends: [
  "jbuilder" {build & >= "1.0+beta8"}
  "core" {>= "0.9"}
  "scid" {>= "1.0"}
]
depopts: []
build:[[ "jbuilder" "build" "@install" ]]