opam-version: "2.0"
name: "tick"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
authors: ["Vincent Bernardoff <vb@luminar.eu.org>"]
homepage: "https://github.com/vbmithr/ocaml-tick"
doc: "https://vbmithr.github.io/ocaml-tick/doc"
license: "ISC"
dev-repo: "git+https://github.com/vbmithr/ocaml-tick.git"
bug-reports: "https://github.com/vbmithr/ocaml-tick/issues"
tags: []
depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build & >= "1.0"}
  "core"
  "scid" {>= "1.0"}
]
depopts: []
build:[[ "dune" "build" "-p" name "-j" jobs ]]
